  * Consolidated all references to release version number to screen.css [OFB]
  * Added ruby script (generate_compressed_css.rb) to scripts dir, and 'csstidy' binary (OS X Universal) 
    for generating tidied version of Blueprint (lib/compressed.css).
  * Consolidated test pages into one single page (test.html).  Uses compressed stylesheet by default.  This ensures test of 
    the chain of generation.  (todo) Intention is to delete other test files if single file works well. (todo) ensure singular 
    test file contains latest changes to other test files.   [GR]
  * Moved the blueprint framework to its own folder in the package, so that the tests, script,
    license and readme don't clutter up our BP folder. [OFB]
  * Re-saved grid.png with Photoshop to remove Fireworks data which was bloating it.  
    Now its about 3KB instead of 40+KB. Resolves Issue 22. [GR]
  * print-compressed.css is now also being generated by the ruby script and is available for use.
	

Version 0.5 - 28/8/2007
--
  * Changed grid width from 14 to 24 columns [OFB]
  * Removed 'first' CSS class and the need to apply it to the first column in a row of columns. [OFB]
  * Reverted to using pixels instead of em units to specify vertical spacing due to baseline issues with 
    all browsers except Firefox. [OFB]
  * New set of default fonts. (Experimental) [OFB]
  * Added test files [OFB]


Version 0.4 - 11/08/2007
--
  * All font sizes and vertical margins are now elastic, through the use of em units. 
    Resizing works great in every tested browser. [OFB]
  * Comes with a new, compressed version of BP, which reduces the size of the core files by 60 percent. [OFB]
  * Support for incremental leading, contributed by Mark Boulton. [OFB]
  * Adds perfected CSS buttons, by Kevin Hale of Particletree fame. [OFB]
  * Fixes all known IE bugs. [OFB]
  * Loads of minor fixes and additions. [OFB]


Initial Release - 03/08/2007
--
  * Initial release of Blueprint CSS
